$Id$


v0.71.3		13-Jun-2005

	upgrade:
		Check mbsetup 7.n.3.14 and 7.n.3.15 settings.

	mbcico:
		Added support for binkp GZ and BZ2 compression. Can be turned
		off per node. Only effective with originating calls. Incoming
		calls follow the remote.
		Increased binkp timeout from 180 to 300 seconds.

	mbsebbs:
		Added logging of remote host and terminal.

	mbnewuser:
		Added logging of remote host and terminal.

	mbfido:
		Fixed commandline parser for mail recipients.

	mbsetup:
		Added setup switches per node to disable PLZ or GZ and BZ2
		compression protocols with binkp.


v0.71.2		16-Jan-2005 - 13-Jun-2005

	upgrade:
		Start mbsetup, in screen 1.2 item 10, add your real internet
		name or IP there. This MUST be the name that is returned when
		you do a nslookup on your IP address.
		Add the following line to /etc/services:
		fido            60179/udp               # chatserver

	general:
		Upgraded to ftscprod.010

	charset:
		Changed rfc-2045 name x-mac to mac. Changed x-ibmpc to cp437.
		This allows rfc mime headers to show official names.
		Added some basic things to support Chinese.

	libdiesel.a:
		Changed the maximum string length from 2560 to 4096 characters.

	libmbinet.a:
		Fixed error messages when the host to connect to has a DNS
		error.

	mbcico:
		Added protection during binkp receive for zero bytes compressed
		data frames, this will cause uncompress error -5 because zero
		bytes can't be compressed at all.
		Fixed test for valid aka's in the EMSI handshake that prevented
		that host aka's (node /0) were not presented to the remote.
		(thanks Przemyslaw Kwiatkowski).
		Removed binkp extra debug logging and some standard dbug logging.
		Added auto workaround for Internet Rex 2.24 upto 2.29 binkp bug.
		However, it is still wise to set the "No binkp/1.1" setting in
		the node setup if you have a record for such node.

	mbsebbs:
		When a message is posted by a user, the CHRS kludge of the user
		is used in the message, not the area setting.